<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context=".Controllers.User_SignUp">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="SMART_BANNER"
        android:visibility="gone"
        ads:adUnitId="@string/banner_ad_unit_id2">
    </com.google.android.gms.ads.AdView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:divider="@drawable/divider"
        android:showDividers="middle"
        android:padding="30dp"
        >

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:textAlignment="center"
            android:fontFamily="serif"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"
            android:background="@drawable/input_def" >
            <requestFocus/>
        </EditText>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:textAlignment="center"
            android:fontFamily="serif"
            android:inputType="textPassword"
            android:textColor="@android:color/black"
            android:background="@drawable/input_def">
        </EditText>
        <CheckBox
            android:id="@+id/showPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_pwd" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/createAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:onClick="newAccount"
            android:text="@string/createAccount"/>
    </LinearLayout>
</LinearLayout>